--- a/src/app/shared/components/headers/headers-operator/headers-operator.component.html
+++ b/src/app/shared/components/headers/headers-operator/headers-operator.component.html
@@ -4,8 +4,14 @@
     <img class="img-profile" alt="profile-img" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
   </ion-avatar>
 
-  <ion-button shape="round" color="primary">
-    <ion-icon class="icon-notify" slot="icon-only" name="notifications-outline"></ion-icon>
-  </ion-button>
+  <div>
+    <ion-badge class="pin-notify" color="danger" slot="start">
+      <span class="number-pin-notify">5</span>
+    </ion-badge>
+    <ion-button shape="round" color="primary">
+      <ion-icon class="icon-notify" slot="icon-only" name="notifications-outline"></ion-icon>
+    </ion-button>
+  </div>
+
 
 </div>
