--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,12 +10,18 @@
     </ion-text>
   </div>
 
-
   <div class="padding-5">
     <ion-text color="medium">
       <h1 class="title-secundary-bold">Sucursales</h1>
     </ion-text>
     <app-branchs-operator/>
+  </div>
+
+  <div class="padding-5">
+    <ion-text color="medium">
+      <h1 class="title-secundary-bold">Transacciones</h1>
+    </ion-text>
+    <app-transaction-operator/>
   </div>
 
 </ion-content>
