--- a/src/app/home/components/branchs-operator/branchs-operator.component.html
+++ b/src/app/home/components/branchs-operator/branchs-operator.component.html
@@ -6,7 +6,8 @@
   <!-- Contenedor scroll -->
   <div class="content-scroll-horizontal" #carousel (scroll)="onScroll(carousel)">
 
-    <ion-card class="card-content">
+    <ion-card class="card-content ion-activatable ripple-parent rounded-rectangle">
+      <ion-ripple-effect></ion-ripple-effect>
       <ion-card-header>
         <ion-card-title class="center">
           <h3 class="title-card">Principal TL-01</h3>
@@ -27,14 +28,13 @@
           <ion-icon class="money-icon-usd" color="success" name="logo-usd"></ion-icon>
         </div>
 
-        <ion-item >
           <ion-text color="medium" class="money-description">Aragua-Maracay</ion-text>
-        </ion-item>
 
       </ion-card-content>
     </ion-card>
 
-    <ion-card class="card-content">
+    <ion-card class="card-content ion-activatable ripple-parent rounded-rectangle">
+      <ion-ripple-effect></ion-ripple-effect>
       <ion-card-header>
         <ion-card-title class="center">
           <h3 class="title-card">Sucursal TL-02</h3>
@@ -55,14 +55,13 @@
           <ion-icon class="money-icon-usd" color="success" name="logo-usd"></ion-icon>
         </div>
 
-        <ion-item >
           <ion-text color="medium" class="money-description">Caracas-Chacao</ion-text>
-        </ion-item>
 
       </ion-card-content>
     </ion-card>
 
-    <ion-card class="card-content">
+    <ion-card class="card-content ion-activatable ripple-parent rounded-rectangle">
+      <ion-ripple-effect></ion-ripple-effect>
       <ion-card-header>
         <ion-card-title class="center">
           <h3 class="title-card">Sucursal TL-03</h3>
@@ -83,14 +82,13 @@
           <ion-icon class="money-icon-usd" color="success" name="logo-usd"></ion-icon>
         </div>
 
-        <ion-item >
           <ion-text color="medium" class="money-description">Falcon-Coro</ion-text>
-        </ion-item>
 
       </ion-card-content>
     </ion-card>
 
-    <ion-card class="card-content">
+    <ion-card class="card-content ion-activatable ripple-parent rounded-rectangle">
+      <ion-ripple-effect></ion-ripple-effect>
       <ion-card-header>
         <ion-card-title class="center">
           <h3 class="title-card">Sucursal TL-04</h3>
@@ -111,9 +109,7 @@
           <ion-icon class="money-icon-usd" color="success" name="logo-usd"></ion-icon>
         </div>
 
-        <ion-item >
           <ion-text color="medium" class="money-description">Guaira-Zulia</ion-text>
-        </ion-item>
 
       </ion-card-content>
     </ion-card>
