--- a/src/app/home/components/transaction-operator/transaction-operator.component.html
+++ b/src/app/home/components/transaction-operator/transaction-operator.component.html
@@ -1,6 +1,6 @@
 <ion-list>
- 
-  <ion-item lines="none" class="item-transaction">
+  <ion-item lines="none" style="margin-top: 3px;" class="item-transaction ion-activatable ripple-parent rounded-rectangle">
+    <ion-ripple-effect></ion-ripple-effect>
     <ion-avatar class="profile-transaction">
       <img alt="perfil-transaction" src="../../../../assets/testing/photo-maracay-test.jpeg" />
     </ion-avatar>
@@ -19,7 +19,9 @@
     
   </ion-item>
 
-  <ion-item lines="none" class="item-transaction">
+  <ion-item lines="none" class="item-transaction ion-activatable ripple-parent rounded-rectangle">
+    <ion-ripple-effect></ion-ripple-effect>
+    
     <ion-avatar class="profile-transaction">
       <img alt="perfil-transaction" src="../../../../assets/testing/photo-guaira-test.jpeg" />
     </ion-avatar>
@@ -38,7 +40,9 @@
     
   </ion-item>
 
-  <ion-item lines="none" class="item-transaction">
+  <ion-item lines="none" class="item-transaction ion-activatable ripple-parent rounded-rectangle">
+    <ion-ripple-effect></ion-ripple-effect>
+    
     <ion-avatar class="profile-transaction">
       <img alt="perfil-transaction" src="../../../../assets/testing/photo-coro-test.jpeg" />
     </ion-avatar>
@@ -57,7 +61,9 @@
     
   </ion-item>
 
-  <ion-item lines="none" class="item-transaction">
+  <ion-item lines="none" class="item-transaction ion-activatable ripple-parent rounded-rectangle">
+    <ion-ripple-effect></ion-ripple-effect>
+    
     <ion-avatar class="profile-transaction">
       <img alt="perfil-transaction" src="../../../../assets/testing/photo-coro-test.jpeg" />
     </ion-avatar>
@@ -76,5 +82,29 @@
     
   </ion-item>
 
+  <ion-item lines="none" class="item-transaction ion-activatable ripple-parent rounded-rectangle">
+    <ion-ripple-effect></ion-ripple-effect>
+    
+    <ion-avatar class="profile-transaction">
+      <img alt="perfil-transaction" src="../../../../assets/testing/photo-coro-test.jpeg" />
+    </ion-avatar>
+
+    <div class="header-row">
+      <div class="left-content">
+        <ion-label>Sucursal Coro</ion-label>
+        <ion-label class="item-label-description">
+          0.50 USD
+        </ion-label>
+      </div>
+      <div class="right-content">
+        1-01-2026
+      </div>
+    </div>
+    
+  </ion-item>
+
+  <ion-item lines="none">
+    <ion-text class="center-text-large">Ver más</ion-text>
+  </ion-item>  
 
 </ion-list>
