--- a/src/app/home/components/transaction-operator/transaction-operator.component.scss
+++ b/src/app/home/components/transaction-operator/transaction-operator.component.scss
@@ -1,9 +1,11 @@
 .profile-transaction {
-    margin-right: 10px;
+    margin-right: 15px;
+    margin-left: 10px;
 }
 
 .item-transaction {
-    margin: 5px;
+    margin-right: 5%;
+    
 }
 
 .item-label-description {
@@ -22,3 +24,16 @@
     color: #666;
     font-size: 14px;
 }
+
+.item-label-more {
+    font-weight: bold;
+    font-size: medium;
+}
+
+.center-text-large {
+    width: 100%;
+    text-align: center;
+    font-size: large;
+}
+
+  
