--- a/src/app/home/components/transaction-operator/transaction-operator.component.html
+++ b/src/app/home/components/transaction-operator/transaction-operator.component.html
@@ -1,110 +1,112 @@
-<ion-list>
-  <ion-item lines="none" style="margin-top: 3px;" class="item-transaction ion-activatable ripple-parent rounded-rectangle">
-    <ion-ripple-effect></ion-ripple-effect>
-    <ion-avatar class="profile-transaction">
-      <img alt="perfil-transaction" src="../../../../assets/testing/photo-maracay-test.jpeg" />
-    </ion-avatar>
+<ion-card>
+  <ion-list>
+    <ion-item lines="none" style="margin-top: 3px;" class="item-transaction ion-activatable ripple-parent rounded-rectangle">
+      <ion-ripple-effect></ion-ripple-effect>
+      <ion-avatar class="profile-transaction">
+        <img alt="perfil-transaction" src="../../../../assets/testing/photo-maracay-test.jpeg" />
+      </ion-avatar>
 
-    <div class="header-row">
-      <div class="left-content">
-        <ion-label>Principal Maracay</ion-label>
-        <ion-label class="item-label-description">
-          1500.00 USD
-        </ion-label>
+      <div class="header-row">
+        <div class="left-content">
+          <ion-label class="label-notify">Principal Maracay</ion-label>
+          <ion-label class="item-label-description">
+            1500.00 USD
+          </ion-label>
+        </div>
+        <div class="right-content">
+          5-01-2026
+        </div>
       </div>
-      <div class="right-content">
-        5-01-2026
+      
+    </ion-item>
+
+    <ion-item lines="none" class="item-transaction ion-activatable ripple-parent rounded-rectangle">
+      <ion-ripple-effect></ion-ripple-effect>
+      
+      <ion-avatar class="profile-transaction">
+        <img alt="perfil-transaction" src="../../../../assets/testing/photo-guaira-test.jpeg" />
+      </ion-avatar>
+
+      <div class="header-row">
+        <div class="left-content">
+          <ion-label class="label-notify">Sucursal Guaira</ion-label>
+          <ion-label class="item-label-description">
+            420.00 USD
+          </ion-label>
+        </div>
+        <div class="right-content">
+          2-01-2026
+        </div>
       </div>
-    </div>
-    
-  </ion-item>
+      
+    </ion-item>
 
-  <ion-item lines="none" class="item-transaction ion-activatable ripple-parent rounded-rectangle">
-    <ion-ripple-effect></ion-ripple-effect>
-    
-    <ion-avatar class="profile-transaction">
-      <img alt="perfil-transaction" src="../../../../assets/testing/photo-guaira-test.jpeg" />
-    </ion-avatar>
+    <ion-item lines="none" class="item-transaction ion-activatable ripple-parent rounded-rectangle">
+      <ion-ripple-effect></ion-ripple-effect>
+      
+      <ion-avatar class="profile-transaction">
+        <img alt="perfil-transaction" src="../../../../assets/testing/photo-coro-test.jpeg" />
+      </ion-avatar>
 
-    <div class="header-row">
-      <div class="left-content">
-        <ion-label>Sucursal Guaira</ion-label>
-        <ion-label class="item-label-description">
-          420.00 USD
-        </ion-label>
+      <div class="header-row">
+        <div class="left-content">
+          <ion-label class="label-notify">Sucursal Coro</ion-label>
+          <ion-label class="item-label-description">
+            100.00 USD
+          </ion-label>
+        </div>
+        <div class="right-content">
+          2-01-2026
+        </div>
       </div>
-      <div class="right-content">
-        2-01-2026
+      
+    </ion-item>
+
+    <ion-item lines="none" class="item-transaction ion-activatable ripple-parent rounded-rectangle">
+      <ion-ripple-effect></ion-ripple-effect>
+      
+      <ion-avatar class="profile-transaction">
+        <img alt="perfil-transaction" src="../../../../assets/testing/photo-coro-test.jpeg" />
+      </ion-avatar>
+
+      <div class="header-row">
+        <div class="left-content">
+          <ion-label class="label-notify">Sucursal Coro</ion-label>
+          <ion-label class="item-label-description">
+            30.00 USD
+          </ion-label>
+        </div>
+        <div class="right-content">
+          1-01-2026
+        </div>
       </div>
-    </div>
-    
-  </ion-item>
+      
+    </ion-item>
 
-  <ion-item lines="none" class="item-transaction ion-activatable ripple-parent rounded-rectangle">
-    <ion-ripple-effect></ion-ripple-effect>
-    
-    <ion-avatar class="profile-transaction">
-      <img alt="perfil-transaction" src="../../../../assets/testing/photo-coro-test.jpeg" />
-    </ion-avatar>
+    <ion-item lines="none" class="item-transaction ion-activatable ripple-parent rounded-rectangle">
+      <ion-ripple-effect></ion-ripple-effect>
+      
+      <ion-avatar class="profile-transaction">
+        <img alt="perfil-transaction" src="../../../../assets/testing/photo-coro-test.jpeg" />
+      </ion-avatar>
 
-    <div class="header-row">
-      <div class="left-content">
-        <ion-label>Sucursal Coro</ion-label>
-        <ion-label class="item-label-description">
-          100.00 USD
-        </ion-label>
+      <div class="header-row">
+        <div class="left-content">
+          <ion-label>Sucursal Coro</ion-label>
+          <ion-label class="item-label-description">
+            0.50 USD
+          </ion-label>
+        </div>
+        <div class="right-content">
+          1-01-2026
+        </div>
       </div>
-      <div class="right-content">
-        2-01-2026
-      </div>
-    </div>
-    
-  </ion-item>
+      
+    </ion-item>
 
-  <ion-item lines="none" class="item-transaction ion-activatable ripple-parent rounded-rectangle">
-    <ion-ripple-effect></ion-ripple-effect>
-    
-    <ion-avatar class="profile-transaction">
-      <img alt="perfil-transaction" src="../../../../assets/testing/photo-coro-test.jpeg" />
-    </ion-avatar>
+    <ion-item lines="none">
+      <ion-text class="center-text-large">Ver más</ion-text>
+    </ion-item>  
 
-    <div class="header-row">
-      <div class="left-content">
-        <ion-label>Sucursal Coro</ion-label>
-        <ion-label class="item-label-description">
-          30.00 USD
-        </ion-label>
-      </div>
-      <div class="right-content">
-        1-01-2026
-      </div>
-    </div>
-    
-  </ion-item>
-
-  <ion-item lines="none" class="item-transaction ion-activatable ripple-parent rounded-rectangle">
-    <ion-ripple-effect></ion-ripple-effect>
-    
-    <ion-avatar class="profile-transaction">
-      <img alt="perfil-transaction" src="../../../../assets/testing/photo-coro-test.jpeg" />
-    </ion-avatar>
-
-    <div class="header-row">
-      <div class="left-content">
-        <ion-label>Sucursal Coro</ion-label>
-        <ion-label class="item-label-description">
-          0.50 USD
-        </ion-label>
-      </div>
-      <div class="right-content">
-        1-01-2026
-      </div>
-    </div>
-    
-  </ion-item>
-
-  <ion-item lines="none">
-    <ion-text class="center-text-large">Ver más</ion-text>
-  </ion-item>  
-
-</ion-list>
+  </ion-list>
+</ion-card>
