--- a/src/app/shared/components/headers/headers-operator/headers-operator.component.html
+++ b/src/app/shared/components/headers/headers-operator/headers-operator.component.html
@@ -8,7 +8,7 @@
     <ion-badge class="pin-notify" color="danger" slot="start">
       <span class="number-pin-notify">5</span>
     </ion-badge>
-    <ion-button shape="round" color="primary">
+    <ion-button shape="round" color="primary" routerLink="/findsend/notifications">
       <ion-icon class="icon-notify" slot="icon-only" name="notifications-outline"></ion-icon>
     </ion-button>
   </div>
