--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -3,22 +3,27 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home" href="/findsend/home">
       <ion-icon aria-hidden="true" name="home"></ion-icon>
-      <ion-label>home</ion-label>
+      <!-- <ion-label>Inicio</ion-label> -->
     </ion-tab-button>
 
     <ion-tab-button tab="order" href="/findsend/order">
       <ion-icon aria-hidden="true" name="id-card"></ion-icon>
-      <ion-label>order</ion-label>
+      <!-- <ion-label>Ordenes</ion-label> -->
     </ion-tab-button>
 
     <ion-tab-button tab="perfil" href="/findsend/perfil">
       <ion-icon aria-hidden="true" name="people"></ion-icon>
-      <ion-label>perfil</ion-label>
+      <!-- <ion-label>Perfil</ion-label> -->
+    </ion-tab-button>
+
+    <ion-tab-button tab="notifications" href="/findsend/notifications">
+      <ion-icon aria-hidden="true" name="notifications"></ion-icon>
+      <!-- <ion-label>Notificacion</ion-label> -->
     </ion-tab-button>
 
     <ion-tab-button tab="config" href="/findsend/config">
       <ion-icon aria-hidden="true" name="settings"></ion-icon>
-      <ion-label>config</ion-label>
+      <!-- <ion-label>Configuracion</ion-label> -->
     </ion-tab-button>
 
   </ion-tab-bar>
