--- a/src/app/home/components/branchs-operator/branchs-operator.component.html
+++ b/src/app/home/components/branchs-operator/branchs-operator.component.html
@@ -6,7 +6,7 @@
   <!-- Contenedor scroll -->
   <div class="content-scroll-horizontal" #carousel (scroll)="onScroll(carousel)">
 
-    <ion-card class="card-content ion-activatable ripple-parent rounded-rectangle">
+    <ion-card mode="ios" class="card-content ion-activatable ripple-parent rounded-rectangle">
       <ion-ripple-effect></ion-ripple-effect>
       <ion-card-header>
         <ion-card-title class="center">
@@ -33,7 +33,7 @@
       </ion-card-content>
     </ion-card>
 
-    <ion-card class="card-content ion-activatable ripple-parent rounded-rectangle">
+    <ion-card mode="ios" class="card-content ion-activatable ripple-parent rounded-rectangle">
       <ion-ripple-effect></ion-ripple-effect>
       <ion-card-header>
         <ion-card-title class="center">
@@ -60,7 +60,7 @@
       </ion-card-content>
     </ion-card>
 
-    <ion-card class="card-content ion-activatable ripple-parent rounded-rectangle">
+    <ion-card mode="ios" class="card-content ion-activatable ripple-parent rounded-rectangle">
       <ion-ripple-effect></ion-ripple-effect>
       <ion-card-header>
         <ion-card-title class="center">
@@ -87,7 +87,7 @@
       </ion-card-content>
     </ion-card>
 
-    <ion-card class="card-content ion-activatable ripple-parent rounded-rectangle">
+    <ion-card mode="ios" class="card-content ion-activatable ripple-parent rounded-rectangle">
       <ion-ripple-effect></ion-ripple-effect>
       <ion-card-header>
         <ion-card-title class="center">
