--- a/src/app/home/components/branchs-operator/branchs-operator.component.scss
+++ b/src/app/home/components/branchs-operator/branchs-operator.component.scss
@@ -63,6 +63,7 @@ ion-card-title {
     scroll-snap-align: start;
     padding: 10px;
     border-radius: 12px;
+    margin: 0;
 }
 
 .money-description {
