--- a/src/app/home/components/transaction-operator/transaction-operator.component.html
+++ b/src/app/home/components/transaction-operator/transaction-operator.component.html
@@ -1,7 +1,6 @@
-<ion-card>
+<ion-card mode="ios">
   <ion-list>
-    <ion-item lines="none" style="margin-top: 3px;" class="item-transaction ion-activatable ripple-parent rounded-rectangle">
-      <ion-ripple-effect></ion-ripple-effect>
+    <ion-item lines="none" class="item-transaction ion-activatable ripple-parent rounded-rectangle">
       <ion-avatar class="profile-transaction">
         <img alt="perfil-transaction" src="../../../../assets/testing/photo-maracay-test.jpeg" />
       </ion-avatar>
@@ -21,7 +20,6 @@
     </ion-item>
 
     <ion-item lines="none" class="item-transaction ion-activatable ripple-parent rounded-rectangle">
-      <ion-ripple-effect></ion-ripple-effect>
       
       <ion-avatar class="profile-transaction">
         <img alt="perfil-transaction" src="../../../../assets/testing/photo-guaira-test.jpeg" />
@@ -42,7 +40,6 @@
     </ion-item>
 
     <ion-item lines="none" class="item-transaction ion-activatable ripple-parent rounded-rectangle">
-      <ion-ripple-effect></ion-ripple-effect>
       
       <ion-avatar class="profile-transaction">
         <img alt="perfil-transaction" src="../../../../assets/testing/photo-coro-test.jpeg" />
@@ -63,7 +60,6 @@
     </ion-item>
 
     <ion-item lines="none" class="item-transaction ion-activatable ripple-parent rounded-rectangle">
-      <ion-ripple-effect></ion-ripple-effect>
       
       <ion-avatar class="profile-transaction">
         <img alt="perfil-transaction" src="../../../../assets/testing/photo-coro-test.jpeg" />
@@ -84,7 +80,6 @@
     </ion-item>
 
     <ion-item lines="none" class="item-transaction ion-activatable ripple-parent rounded-rectangle">
-      <ion-ripple-effect></ion-ripple-effect>
       
       <ion-avatar class="profile-transaction">
         <img alt="perfil-transaction" src="../../../../assets/testing/photo-coro-test.jpeg" />
