--- a/src/app/shared/components/headers/headers-operator/headers-operator.component.scss
+++ b/src/app/shared/components/headers/headers-operator/headers-operator.component.scss
@@ -1,3 +1,7 @@
+ion-button {
+    font-size: large;
+}
+
 .padding-10 {
     padding: 10px;
 }
@@ -29,4 +33,8 @@
 
 .number-pin-notify {
     color: white;
+}
+
+.notifications {
+    margin-top: 10px;
 }
