--- a/src/app/home/components/transaction-operator/transaction-operator.component.html
+++ b/src/app/home/components/transaction-operator/transaction-operator.component.html
@@ -28,7 +28,7 @@
       <div class="header-row">
         <div class="left-content">
           <ion-label class="label-notify">Sucursal Guaira</ion-label>
-          <ion-label class="item-label-description">
+          <ion-label class="item-label-description label-red">
             420.00 USD
           </ion-label>
         </div>
@@ -88,7 +88,7 @@
       <div class="header-row">
         <div class="left-content">
           <ion-label>Sucursal Coro</ion-label>
-          <ion-label class="item-label-description">
+          <ion-label class="item-label-description label-red">
             0.50 USD
           </ion-label>
         </div>
