--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -6,7 +6,7 @@
     </ion-tab-button>
 
     <ion-tab-button tab="order" href="/findsend/order">
-      <ion-icon aria-hidden="true" name="id-card"></ion-icon>
+      <ion-icon aria-hidden="true" name="swap-horizontal"></ion-icon>
       <!-- <ion-label>Ordenes</ion-label> -->
     </ion-tab-button>
 
