--- a/src/app/home/components/transaction-operator/transaction-operator.component.scss
+++ b/src/app/home/components/transaction-operator/transaction-operator.component.scss
@@ -7,7 +7,6 @@ ion-item{
 }
 
 .item-transaction {
-    // margin-right: 5%;
     margin-top: 3px;
 }
 
@@ -41,4 +40,8 @@ ion-item{
 
 .label-notify{
     font-size: small;
+}
+
+.label-red {
+    color: red !important;
 }
