--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,13 +1,17 @@
 <ion-content class="content-page" [fullscreen]="true">
- 
-  <div class="margin-3 margin-top-20">
-    <app-header-operator/>
-  </div>
+  
+  <div class="splash">
 
-  <div class="padding-8">
-    <ion-text color="dark">
-      <h1 class="title-primary-bold" >Cuenta</h1>
-    </ion-text>
+    <div class="margin-3 margin-top-20">
+      <app-header-operator/>
+    </div>
+
+    <div class="padding-8">
+      <ion-text color="dark">
+        <h1 class="title-primary-bold" >Cuenta</h1>
+      </ion-text>
+    </div>
+
   </div>
 
   <div class="padding-4">
