--- a/src/app/notifications/notifications.component.html
+++ b/src/app/notifications/notifications.component.html
@@ -1,13 +1,14 @@
 <ion-content>
-  <div class="padding-5">
+
+  <div class="splash padding-5">
 
     <div class="tilte-page">
-      <ion-text color="dark">
+      <ion-text color="light">
         <h1 class="title-primary-bold">Notificaciones</h1>
       </ion-text>
     </div>
-
-    <app-list-operator/>
-
   </div>
+
+  <app-list-operator />
+
 </ion-content>
