--- a/src/app/notifications/notifications.component.scss
+++ b/src/app/notifications/notifications.component.scss
@@ -10,3 +10,12 @@
     font-weight: bold;
     font-size: x-large;
 }
+
+.splash {
+    margin: 0;
+    padding: 0;
+    border: .1px solid rgba(3, 3, 3, 0);
+    padding-bottom: 30px;
+    background-color: #0c72c9;
+    border-bottom-left-radius: 25%;
+}
