--- a/src/app/shared/components/headers/headers-operator/headers-operator.component.scss
+++ b/src/app/shared/components/headers/headers-operator/headers-operator.component.scss
@@ -16,6 +16,7 @@ ion-button {
 }
 
 .content-header {
+    padding-top: 0;
     display: flex;
     justify-content: space-between;
     align-items: center;
