--- a/src/app/notifications/components/list-operator/list-operator.component.html
+++ b/src/app/notifications/components/list-operator/list-operator.component.html
@@ -36,7 +36,7 @@
   <ion-modal mode="ios" style="--border-radius: 10px;" #modal [canDismiss]="canDismiss" [presentingElement]="page">
     <ng-template>
       
-      <ion-item color="primary">
+      <ion-item>
         <ion-label class="label-details">Detalles Transaccion</ion-label>
         <ion-button color="danger" (click)="modal.dismiss()">X</ion-button>
       </ion-item>
