--- a/src/app/notifications/notifications.component.html
+++ b/src/app/notifications/notifications.component.html
@@ -3,7 +3,7 @@
   <div class="splash padding-5">
 
     <div class="tilte-page">
-      <ion-text color="light">
+      <ion-text>
         <h1 class="title-primary-bold">Notificaciones</h1>
       </ion-text>
     </div>
