--- a/src/app/home/components/branchs-operator/branchs-operator.component.html
+++ b/src/app/home/components/branchs-operator/branchs-operator.component.html
@@ -24,7 +24,9 @@
 
         <ion-text class="money-balance">Balance:</ion-text>
         <div class="content-acount">
-          <ion-text class="money">1500.00</ion-text>
+          <ion-text class="money">
+            1500.00
+          </ion-text>
           <ion-icon class="money-icon-usd" color="success" name="logo-usd"></ion-icon>
         </div>
 
@@ -51,7 +53,9 @@
 
         <ion-text class="money-balance">Balance:</ion-text>
         <div class="content-acount">
-          <ion-text class="money">2100.00</ion-text>
+          <ion-text class="money">
+            2100.00
+          </ion-text>
           <ion-icon class="money-icon-usd" color="success" name="logo-usd"></ion-icon>
         </div>
 
@@ -78,7 +82,9 @@
 
         <ion-text class="money-balance">Balance:</ion-text>
         <div class="content-acount">
-          <ion-text class="money">1500.00</ion-text>
+          <ion-text class="money">
+            1500.00
+          </ion-text>
           <ion-icon class="money-icon-usd" color="success" name="logo-usd"></ion-icon>
         </div>
 
@@ -105,7 +111,9 @@
 
         <ion-text class="money-balance">Balance:</ion-text>
         <div class="content-acount">
-          <ion-text class="money">1500.00</ion-text>
+          <ion-text class="money">
+            1500.00
+          </ion-text>
           <ion-icon class="money-icon-usd" color="success" name="logo-usd"></ion-icon>
         </div>
 
