--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -6,8 +6,9 @@ h1 {
     padding: 4%;
 }
 
-.padding-8 {
-    padding: 8%;
+.padding-2 {
+    padding: 0%;
+    padding-left: 8%;
     padding-bottom: 0%;
 }
 
@@ -37,6 +38,7 @@ h1 {
     padding: 0;
     border: .1px solid rgba(3, 3, 3, 0);
     padding-bottom: 30px;
-    background-color: #0c72c9;
+    // background-color: #0c72c9;
+    background: var(--app-background-splash);
     border-bottom-left-radius: 25%;
 }
