--- a/src/app/notifications/notifications.component.scss
+++ b/src/app/notifications/notifications.component.scss
@@ -9,13 +9,14 @@
     margin: 0;
     font-weight: bold;
     font-size: x-large;
+    color: aliceblue;
 }
 
 .splash {
     margin: 0;
     padding: 0;
     border: .1px solid rgba(3, 3, 3, 0);
-    padding-bottom: 30px;
-    background-color: #0c72c9;
+    padding-bottom: 10px;
+    background: var(--app-background-splash);
     border-bottom-left-radius: 25%;
 }
