--- a/src/app/perfil/perfil.page.html
+++ b/src/app/perfil/perfil.page.html
@@ -1,20 +1,96 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Perfil
-    </ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Page Perfil</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <div class="splash padding-5">
+    <div class="tilte-page">
+      <ion-text>
+        <h1 class="title-primary-bold">Perfiles</h1>
+      </ion-text>
+    </div>
+  </div>
 
-  <p>
-    Perfil
-  </p>
+  <div class="add-profile-container">
+    <div class="left-text">
+      <ion-text>
+        <p>
+          <ion-icon name="people"></ion-icon>
+          Agrega nuevo usuario
+        </p>
+      </ion-text>
+    </div>
+
+    <ion-chip id="open-modal-add" class="add-chip">
+      <ion-label>Registrar</ion-label>
+    </ion-chip>
+  </div>
+
+  <!-- MODAL AGREGAR -->
+  <ion-modal trigger="open-modal-add" mode="ios" style="--border-radius: 10px;" #modalAdd [canDismiss]="canDismiss" [presentingElement]="page">
+    <ng-template>
+
+      <ion-item color="dark">
+        <ion-label class="label-details">Agregar Usuario</ion-label>
+        <ion-button color="danger" (click)="modalAdd.dismiss()">X</ion-button>
+      </ion-item>
+
+      <ion-content color="dark" class="ion-padding">
+        <p>Contenido del modal</p>
+      </ion-content>
+    </ng-template>
+  </ion-modal>
+
+  <div #page>
+
+    <ion-searchbar mode="ios" animated="true" placeholder=" Buscar" show-cancel-button="never"></ion-searchbar>
+
+    @for (item of [1,2,3,4,5,6,7,8,9,0]; track $index) {
+    <div>
+      <ion-card class="card-contr item-transaction">
+        <ion-ripple-effect></ion-ripple-effect>
+
+        <ion-card-content>
+          <ion-item lines="none" style="margin-top: 3px;">
+            <ion-avatar class="profile-transaction">
+              <img class="img-profile" alt="perfil-transaction"
+                src="../../../../assets/testing/photo-maracay-test.jpeg" />
+            </ion-avatar>
+
+            <div class="header-row">
+              <div class="left-content">
+                <ion-label class="label-notify">Principal Maracay</ion-label>
+                <ion-label class="item-label-description">
+                  Luis Avarez - P1
+                </ion-label>
+              </div>
+              <div class="right-content ion-activatable ripple-parent rounded-rectangle">
+                <ion-button color="light" (click)="openModal(item)" size="small" mode="ios">
+                  ver mas
+                </ion-button>
+
+                <!-- <ion-icon style="font-size: x-large;" color="success" name="eye-outline"></ion-icon> -->
+              </div>
+            </div>
+          </ion-item>
+        </ion-card-content>
+
+      </ion-card>
+    </div>
+    }
+
+    <!-- MODAL EDICION -->
+    <ion-modal mode="ios" style="--border-radius: 10px;" #modal [canDismiss]="canDismiss" [presentingElement]="page">
+      <ng-template>
+
+        <ion-item color="dark">
+          <ion-label class="label-details">Detalles Usuario</ion-label>
+          <ion-button color="danger" (click)="modal.dismiss()">X</ion-button>
+        </ion-item>
+
+        <ion-content color="dark" class="ion-padding">
+          <p>Contenido del modal</p>
+        </ion-content>
+      </ng-template>
+    </ion-modal>
+
+  </div>
 
 </ion-content>
