--- a/src/app/shared/components/headers/headers-operator/headers-operator.component.html
+++ b/src/app/shared/components/headers/headers-operator/headers-operator.component.html
@@ -1,7 +1,7 @@
 <div class="content-header padding-10 inline-block">
   
   <ion-avatar class="img-profile">
-    <img class="img-profile" alt="profile-img" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+    <img class="img-profile" alt="profile-img" src="../../../../../assets/testing/photo-perfil.png" />
   </ion-avatar>
 
   <div class="notifications">
@@ -9,7 +9,7 @@
       <span class="number-pin-notify">5</span>
     </ion-badge>
     <ion-button fill="clear" shape="round" routerLink="/findsend/notifications">
-      <ion-icon color="warning" class="icon-notify" slot="icon-only" name="notifications-outline"></ion-icon>
+      <ion-icon color="warning" class="icon-notify" slot="icon-only" name="notifications"></ion-icon>
     </ion-button>
   </div>
 
