--- a/src/app/shared/components/headers/headers-operator/headers-operator.component.html
+++ b/src/app/shared/components/headers/headers-operator/headers-operator.component.html
@@ -8,7 +8,7 @@
     <ion-badge mode="ios" class="pin-notify" color="danger" slot="start">
       <span class="number-pin-notify">5</span>
     </ion-badge>
-    <ion-button fill="clear" shape="round" routerLink="/findsend/notifications">
+    <ion-button fill="clear" shape="round" (click)="navNotifications()">
       <ion-icon color="warning" class="icon-notify" slot="icon-only" name="notifications"></ion-icon>
     </ion-button>
   </div>
