--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,26 +1,26 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="home" href="/findsend/home">
+    <ion-tab-button tab="home" href="/tabs/findsend/home">
       <ion-icon aria-hidden="true" name="home"></ion-icon>
       <!-- <ion-label>Inicio</ion-label> -->
     </ion-tab-button>
 
-    <ion-tab-button tab="order" href="/findsend/order">
+    <ion-tab-button tab="order" href="/tabs/findsend/order">
       <ion-icon aria-hidden="true" name="swap-horizontal"></ion-icon>
       <!-- <ion-label>Ordenes</ion-label> -->
     </ion-tab-button>
 
-    <ion-tab-button tab="perfil" href="/findsend/perfil">
+    <ion-tab-button tab="perfil" href="/tabs/findsend/perfil">
       <ion-icon aria-hidden="true" name="people"></ion-icon>
       <!-- <ion-label>Perfil</ion-label> -->
     </ion-tab-button>
 
-    <ion-tab-button tab="notifications" href="/findsend/notifications">
+    <ion-tab-button tab="notifications" href="/tabs/findsend/notifications">
       <ion-icon aria-hidden="true" name="notifications"></ion-icon>
       <!-- <ion-label>Notificacion</ion-label> -->
     </ion-tab-button>
 
-    <ion-tab-button tab="config" href="/findsend/config">
+    <ion-tab-button tab="config" href="/tabs/findsend/config">
       <ion-icon aria-hidden="true" name="settings"></ion-icon>
       <!-- <ion-label>Configuracion</ion-label> -->
     </ion-tab-button>
