--- a/src/app/config/config.page.html
+++ b/src/app/config/config.page.html
@@ -12,7 +12,7 @@
     <ion-avatar slot="start">
       <img alt="avatar" src="../../assets/testing/photo-perfil.png" />
     </ion-avatar>
-  
+
     <div class="label-container">
       <ion-label class="name">Luis Alvarez</ion-label>
       <ion-label class="id">Operador - P1</ion-label>
@@ -27,10 +27,11 @@
 
   <div class="content-toggle">
     <ion-item lines="none">
-      <ion-toggle style="margin-left: 20px;" (ionChange)="toggleTheme($event)" color="success" mode="ios" justify="space-between">Claro / Oscuro</ion-toggle>
+      <ion-toggle style="margin-left: 20px;" (ionChange)="toggleTheme($event)" color="success" mode="ios"
+        justify="space-between">Claro / Oscuro</ion-toggle>
     </ion-item>
   </div>
- 
+
   <div class="subtilte-page">
     <ion-text>
       <h1 class="subtitle-primary-bold">Informacion Personal</h1>
@@ -40,10 +41,12 @@
   <ion-card mode="ios">
     <ion-card-content>
       <ion-item mode="ios" lines="none">
-        <ion-input labelPlacement="stacked" mode="ios" label="Nombre Usuario" value="LAlvarez" [readonly]="true"></ion-input>
+        <ion-input labelPlacement="stacked" mode="ios" label="Nombre Usuario" value="LAlvarez"
+          [readonly]="true"></ion-input>
       </ion-item>
       <ion-item mode="ios" lines="none">
-        <ion-input labelPlacement="stacked" mode="ios" label="Correo" value="LAlvarez@gmail.com" [readonly]="true"></ion-input>
+        <ion-input labelPlacement="stacked" mode="ios" label="Correo" value="LAlvarez@gmail.com"
+          [readonly]="true"></ion-input>
       </ion-item>
       <ion-item mode="ios" lines="none">
         <ion-input labelPlacement="stacked" mode="ios" label="Rol" value="Operador" [readonly]="true"></ion-input>
@@ -53,6 +56,19 @@
       </ion-item>
     </ion-card-content>
   </ion-card>
-  
+
+  <div class="subtilte-page">
+    <ion-text>
+      <h1 class="subtitle-primary-bold">Otras Opciones</h1>
+    </ion-text>
+  </div>
+  <ion-card mode="ios">
+    <ion-card-content>
+      <ion-item lines="none" [routerLink]="['/login']" [button]="true">
+        <ion-icon color="medium" slot="start" name="log-out-outline" size="large"></ion-icon>
+        <ion-label>Cerrar Sesion</ion-label>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
 
 </ion-content>
