--- a/src/app/config/config.page.scss
+++ b/src/app/config/config.page.scss
@@ -45,6 +45,7 @@ ion-card-content {
     border: .1px solid rgba(3, 3, 3, 0);
     padding-bottom: 20px;
     background: var(--app-background-splash);
+    box-shadow: 0 4px 6px -2px rgba(0,0,0,0.3);
     border-bottom-left-radius: 25%;
 }
 
