--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -38,7 +38,7 @@ h1 {
     padding: 0;
     border: .1px solid rgba(3, 3, 3, 0);
     padding-bottom: 30px;
-    // background-color: #0c72c9;
+    box-shadow: 0 4px 6px -2px rgba(0, 0, 0, 0.3);
     background: var(--app-background-splash);
     border-bottom-left-radius: 25%;
 }
