--- a/src/app/notifications/notifications.component.scss
+++ b/src/app/notifications/notifications.component.scss
@@ -18,5 +18,6 @@
     border: .1px solid rgba(3, 3, 3, 0);
     padding-bottom: 10px;
     background: var(--app-background-splash);
+    box-shadow: 0 4px 6px -2px rgba(0,0,0,0.3);
     border-bottom-left-radius: 25%;
 }
