--- a/src/app/perfil/perfil.page.scss
+++ b/src/app/perfil/perfil.page.scss
@@ -115,6 +115,7 @@ ion-list {
     border: .1px solid rgba(3, 3, 3, 0);
     padding-bottom: 10px;
     background: var(--app-background-splash);
+    box-shadow: 0 4px 6px -2px rgba(0,0,0,0.3);
     border-bottom-left-radius: 25%;
 }
 
